<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gy_two">

    <EditText
        android:id="@+id/fullname_signup"
        android:hint="@string/fullname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/email_signup"
        android:hint="@string/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/password_signup"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/phoneno_signup"
        android:hint="@string/phonenumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:inputType="phone"/>

    <Button
        android:id="@+id/button_signup"
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/prob1_signup"
        android:text="@string/account_problem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>